# openai-playground

./: pyproject.toml
data/: gpt_5_1_streaming_output.json
notebooks/: dynamic_tool_routing.ipynb  gpt_5_1_features.ipynb  negation_sim.ipynb  responses_api_langchain.ipynb
tests/: test.py
