[project]
name = "dynamic-tool-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv-python>=0.0.1",
    "langchain>=1.1.0",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
